appId: host.exp.Exponent
---
- openLink: "exp://192.168.29.51:8081"

- tapOn:
    id: "product_4_add_button"
    retryTapIfNoChange: true 

- tapOn:
    id: "cart_icon"

- tapOn:
    id: "cart_item_delete_0"

- pressKey: "BACK"
- assertVisible:
    text: "Home" 